Fix zoom on ios

--- a/app/yamu-react-app/styles/globals/reset.css
+++ b/app/yamu-react-app/styles/globals/reset.css
@@ -131,3 +131,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+html {
+  -webkit-text-size-adjust: none;
+  touch-action: manipulation;
+}
